--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -23,6 +23,8 @@ Microsystems, Inc. All Rights Reserved.
     <property name="binroot" location="${nbroot}/../nbextra"/>
     <property name="nbext_root" location="${nbroot}/nbbuild"/>
 
+    <property name="xml-apis" location="${binroot}/core/release/lib/ext/xml-apis.jar" />
+
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
@@ -33,7 +35,6 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="${nbext_root}/nbantext.jar"/>
-    <taskdef name="genjavadoc" classname="org.netbeans.nbbuild.GenerateJavadoc" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="for-each" classname="org.netbeans.nbbuild.ForEach" classpath="${nbext_root}/nbantext.jar"/>
 
     <property name="build.compiler.debug" value="on"/>
@@ -58,7 +59,7 @@ Microsystems, Inc. All Rights Reserved.
                 <pathelement location="${nbroot}/openidex/netbeans/modules/autoload/openidex.jar"/>
                 <pathelement location="${tax_lib_root}/src/"/>
                 <pathelement location="${api_root}/src/"/>
-                <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
+                <pathelement location="${xml-apis}"/> <!-- JAXP and SAX dependency -->
             </classpath>
         </javac>
 
@@ -163,9 +164,45 @@ Microsystems, Inc. All Rights Reserved.
     <target name="javadoc">
         <delete dir="javadoc"/>
         <mkdir dir="javadoc"/>
-        <genjavadoc destdir="javadoc" modules="openide,openidex,xml/core">
-            <topdir path="${nbroot}"/>
-        </genjavadoc>
+
+        <!-- external JavaDocs -->
+        <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.4/docs/api"/>
+        <property name="sax-docs-location" value="http://www.saxproject.org/apidoc"/>
+        <property name="openide-docs-location" value="http://www.netbeans.org/download/dev/javadoc/OpenAPIs"/>
+        <property name="xml-api-docs-location" value="${api_root}/javadoc/XML-APIs"/>
+
+        <javadoc destdir="javadoc"
+                 packagenames="org.netbeans.modules.xml.api.*, org.netbeans.modules.xml.spi.*"
+                 doctitle="NetBeans XML Core APIs"
+                 windowtitle="NetBeans XML Core APIs"
+        >
+            <sourcepath>
+                <pathelement location="src"/>
+            </sourcepath>        
+            <classpath>        
+                <fileset dir="${nbroot}/openide/netbeans/lib">
+                    <include name="openide*.jar"/>
+                </fileset>
+                <pathelement location="${xml-apis}"/> <!-- JAXP and SAX dependency -->
+            </classpath>
+            
+            <link href="${jdk-docs-location}"
+                  offline="true"
+                  packagelistLoc="${api_root}/doc/external/jdk"
+            />
+            <link href="${sax-docs-location}"
+                  offline="true"
+                  packagelistLoc="${api_root}/doc/external/sax"
+            />
+            <link href="${openide-docs-location}"
+                  offline="true"
+                  packagelistLoc="${api_root}/doc/external/openide"
+            />            
+            <link href="${xml-api-docs-location}"
+                  offline="true"
+                  packagelistLoc="${api_root}/javadoc/XML-APIs/package-list"
+            />            
+        </javadoc>                
     </target>
 
 
