Added configuration support for API signature builds

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -401,3 +401,8 @@ config.javadoc=ant, \
         openide, \
         openidex/looks, \
         xml/api
+
+; configuration for signature test builds
+config.sigtest=${config.stable}, \
+        mdr, \
+        openidex/looks
