Fix for issue 9701 and 26226. Fix in nbbuild/antsrc/org/netbeans/nbbuild/NbMerge.java allows user to allow non-fixedmodules builds to fail and can set user specified property to the list of successfully built modules. The fix adds four new attributes to nbmerge task: failonerror, fixedmodules, builtmodulesproperty, mergedependentmodules.
Fix in nbbuild/build.properties is from one half for 26226.
It cleans up module configs to cascade.
Modules tasklist, mdr,core/naming and openidex/looks added
to daily-alpha-nbms configurations. Module vcscvs/compat
added to stable configuration.

Fix in nbbuild/antsrc/org/netbeans/nbbuild/CleanAll.java allows
user to let Ant ignore build error and continue "cleaning" even the
particular clean build failed.

Fix in nbbuild/antsrc/org/netbeans/nbbuild/MakeNBM.java sets
default protocol to "http://" if the distribution url doesn't start with "http://".

Fix in nbbuild/build.xml implements changes in CleanAll.java and NbMerge.java.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -3,7 +3,30 @@ test.user.dir=testuserdir
 sanitystart.args.additional= 
 tryme.args.additional=
 
-; Only useful to override in conjunction with merge target during development: -->
+; Useful for "always successful" build, when you don't care of some
+; particular (and currently broken) modules
+stop.when.broken.modules=true
+
+; resolve compile time dependencies and merge all dependent modules
+; set to true and command `ant -Dmodules=javacvs` will build IDE
+; with working module javacvs
+merge.dependent.modules=false
+
+; usefull for NBM build. <nbmerge> can set it to the list
+; of successfuly built modules => can create NBM for them
+; the most powerful combination is to set value to "modules"
+; and set stop.when.broken.modules to false
+built.modules.property=
+
+; resolve compile-time dependencies during cleaning working repository
+; set it to true if you want to clean also modules, your module(s) depends on
+resolve.clean.dependencies=false
+
+; stop, if the module have got wrong "clean" target
+; if set to false, clean build never fail on calls of the clean targets.
+stop.when.clean.error=true
+
+; Only useful to override in conjunction with merge target during development:
 fixedmodules=core, \
         openide, \
         core/javahelp, \
@@ -25,24 +48,16 @@ config.superslim=classfile, \
         text, \
         utilities
 
-config.slim=autoupdate, \
+config.slim=${config.superslim}, \
+        autoupdate, \
         beans, \
-        classfile, \
-        clazz, \
         debuggercore, \
         debuggerjpda, \
-        editor, \
         form, \
-        html, \
         httpserver, \
         httpserver/servletapi, \
-        image, \
-        java/api, \
-        java, \
-        openidex, \
-        projects, \
-        text, \
-        utilities
+        javadoc, \
+        properties
 
 local.config.libs=libs/xalan,libs/jaxp
 
@@ -60,44 +75,25 @@ local.config.vcsprofiles=vcsgeneric/profiles/cvsprofiles, \
         vcsgeneric/profiles/pvcs, \
         vcsgeneric/profiles/vss
 
-config.stable=ant, \
+config.stable=${config.slim}, \
+        ant, \
         apisupport/lite, \
         applet, \
-        autoupdate, \
-        beans, \
-        classfile, \
-        clazz, \
         core/settings, \
-        debuggercore, \
-        debuggerjpda, \
         diff, \
-        editor, \
         extbrowser, \
-        form, \
-        html, \
-        httpserver, \
-        httpserver/servletapi, \
         i18n, \
-        image, \
         j2eeserver, \
         jarpackager, \
-        java/api, \
-        java, \
         javacvs, \
-        javadoc, \
         jndi, \
-        openidex, \
-        projects, \
-        properties, \
         rmi, \
         schema2beans, \
         scripting, \
-        text, \
         tomcatint/tomcat40, \
         tomcatint/bundledtomcat, \
         ui/welcome, \
         usersguide, \
-        utilities, \
         vcscore, \
         vcscvs/compat, \
         vcsgeneric, \
@@ -109,281 +105,71 @@ config.stable=ant, \
         ${local.config.xml}, \
         ${local.config.vcsprofiles}
 
-config.stable-with-apisupport=ant, \
+config.stable-with-apisupport=${config.stable}, \
         apisupport, \
-        apisupport/lite, \
         apisupport/ant, \
-        apisupport/apidocs, \
-        applet, \
-        autoupdate, \
-        beans, \
-        classfile, \
-        clazz, \
-        core/settings, \
-        debuggercore, \
-        debuggerjpda, \
-        diff, \
-        editor, \
-        extbrowser, \
-        form, \
-        html, \
-        httpserver, \
-        httpserver/servletapi, \
-        i18n, \
-        image, \
-        j2eeserver, \
-        jarpackager, \
-        java/api, \
-        java, \
-        javacvs, \
-        javadoc, \
-        jndi, \
-        openidex, \
-        projects, \
-        properties, \
-        rmi, \
-        schema2beans, \
-        scripting, \
-        text, \
-        tomcatint/tomcat40, \
-        tomcatint/bundledtomcat, \
-        ui/welcome, \
-        usersguide, \
-        utilities, \
-        vcscore, \
-        vcscvs/compat, \
-        vcsgeneric, \
-        web/servletapi23, \
-        web/core, \
-        web/jspparser, \
-        web/jspsyntax, \
-        ${local.config.libs}, \
-        ${local.config.xml}, \
-        ${local.config.vcsprofiles}
+        apisupport/apidocs
 
-config.bloated=ant, \
+config.bloated=${config-stable-with-apisupport}, \
         ant/docs, \
-        apisupport, \
-        apisupport/lite, \
-        apisupport/ant, \
-        apisupport/apidocs, \
-        applet, \
-        autoupdate, \
-        beans, \
-        classfile, \
         classclosure, \
-        clazz, \
-        core/settings, \
+        corba, \
         cpp, \
         cpplite, \
-        debuggercore, \
-        debuggerjpda, \
+        db, \
         debuggertools, \
-        diff, \
-        editor, \
-        extbrowser, \
         externaleditor, \
-        form, \
         freestylebrowser, \
-        html, \
-        httpserver, \
-        httpserver/servletapi, \
-        i18n, \
-        image, \
         innertesters, \
-        j2eeserver, \
-        jarpackager, \
-        java/api, \
-        java, \
-        javacvs, \
-        javadoc, \
         logger, \
         makefile, \
         metrics, \
         monitor, \
         multicompile, \
         objectbrowser, \
-        openidex, \
-        projects, \
-        properties, \
-        ui/welcome, \
         remotefs, \
-        rmi, \
-        schema2beans, \
-        scripting, \
         serialversion, \
         sysprops, \
         tasklist, \
-        text, \
-        tomcatint/tomcat32, \
-        tomcatint/tomcat40, \
-        tomcatint/bundledtomcat, \
-        usersguide, \
-        utilities, \
-        vcscore, \
-        vcscvs, \
-        vcscvs/compat, \
-        vcsgeneric, \
-        web/servletapi23, \
-        web/core, \
-        web/jspparser, \
-        web/jspsyntax, \
         web/jspdebug, \
         web/advanced, \
         web/taglibed, \
-        ${local.config.libs}, \
-        ${local.config.xml}, \
-        ${local.config.vcsprofiles}, \
         openidex/looks
 
-config.bloated-plus-extrabins=ant, \
-        ant/docs, \
-        apisupport, \
-        apisupport/lite, \
-        apisupport/ant, \
-        apisupport/apidocs, \
-        applet, \
-        autoupdate, \
-        beans, \
-        classfile, \
-        classclosure, \
-        clazz, \
-        core/settings, \
-        cpp, \
-        cpplite, \
-        debuggercore, \
-        debuggerjpda, \
-        debuggertools, \
-        diff, \
-        editor, \
-        extbrowser, \
-        externaleditor, \
-        form, \
-        freestylebrowser, \
-        html, \
-        httpserver, \
-        httpserver/servletapi, \
-        i18n, \
+config.bloated-plus-extrabins=${config.bloated}, \
         icebrowser, \
-        image, \
-        innertesters, \
-        j2eeserver, \
-        jarpackager, \
-        java/api, \
-        java, \
-        javacvs, \
-        javadoc, \
-        jini, \
-        logger, \
-        makefile, \
-        metrics, \
-        monitor, \
-        multicompile, \
-        objectbrowser, \
-        openidex, \
-        projects, \
-        properties, \
-        remotefs, \
-        rmi, \
-        schema2beans, \
-        scripting, \
-        serialversion, \
-        sysprops, \
-        tasklist, \
-        text, \
-        tomcatint/tomcat32, \
-        tomcatint/tomcat40, \
-        tomcatint/bundledtomcat, \
-        ui/welcome, \
-        usersguide, \
-        utilities, \
-        vcscore, \
-        vcscvs, \
-        vcscvs/compat, \
-        vcsgeneric, \
-        web/servletapi23, \
-        web/core, \
-        web/jspparser, \
-        web/jspsyntax, \
-        web/jspdebug, \
-        web/advanced, \
-        web/taglibed, \
-        ${local.config.libs}, \
-        ${local.config.vcsprofiles}, \
-        ${local.config.xml}
+        jini
 
 ; moduleconfig for nbms in Daily Alpha Update Centre
-; consider modules icebrowser,cpplite,cpp,vcscvs,vcscvs/compat,jini,debuggertools
-config.daily-alpha-nbms=ant, \
+; consider modules icebrowser,vcscvs,jini,debuggertools
+config.daily-alpha-nbms=${config.stable-with-apisupport}, \
         ant/docs, \
-        apisupport, \
-        apisupport/lite, \
-        apisupport/ant, \
-        apisupport/apidocs, \
-        applet, \
-        autoupdate, \
-        beans, \
-        classfile, \
         classclosure, \
-        clazz, \
         corba, \
-        core/settings, \
-        debuggercore, \
-        debuggerjpda, \
-        diff, \
-        editor, \
-        extbrowser, \
+        cpp, \
+        cpplite, \
+        db, \
         externaleditor, \
-        form, \
         freestylebrowser, \
-        html, \
-        httpserver, \
-        httpserver/servletapi, \
-        i18n, \
-        image, \
         innertesters, \
-        j2eeserver, \
-        jarpackager, \
-        java/api, \
-        java, \
-        javacvs, \
-        javadoc, \
         lexer, \
         logger, \
         makefile, \
+        mdr, \
         metrics, \
         monitor, \
         multicompile, \
         objectbrowser, \
-        openidex, \
-        projects, \
-        properties, \
         remotefs, \
-        rmi, \
-        schema2beans, \
-        scripting, \
         serialversion, \
         sysprops, \
-        text, \
-        tomcatint/tomcat40, \
-        tomcatint/bundledtomcat, \
+        tasklist, \
         translatedfiles, \
-        ui/welcome, \
-        usersguide, \
-        utilities, \
-        vcscore, \
-        vcsgeneric, \
-        web/servletapi23, \
-        web/core, \
-        web/jspparser, \
-        web/jspsyntax, \
+        treefs, \
         web/jspdebug, \
         web/advanced, \
         web/taglibed, \
-        webl, \
-        ${local.config.libs}, \
-        ${local.config.xml}, \
-        ${local.config.vcsprofiles}
+        webl
 
 ; make javadoc for these packages
 ; - the list will be shared for signature API tests!
