--- a/form/test/build.xml
+++ b/form/test/build.xml
@@ -64,7 +64,7 @@ Microsystems, Inc. All Rights Reserved.
           -->
     
         <!-- List of directories where jars will be searched. -->
-        <property name="xtest.extra.jars.path" location="${ffj.repository}/jellytools;${ffj.repository}/jemmy" />
+        <property name="xtest.extra.jars.path" location="${ffj.repository}/jellytools;${ffj.repository}/jemmy;${netbeans.home}/modules" />
     
         <!-- This jars is used for compilation, execution codetests and also for
              execution ide tests (it means this classpath will be mounted in repository).
@@ -73,7 +73,7 @@ Microsystems, Inc. All Rights Reserved.
                  example: <property name="xtest.extra.jars" value="jemmy.jar;jelly.jar"/>
           -->
                 
-  	<property name="xtest.extra.jars"     value=""/>
+  	<property name="xtest.extra.jars"     value="form.jar"/>
 
 	<!-- These jars will be copied to directory ${netebans.home}/lib/ext.
 	     Again you can write only name of jar or zip file, not in which directory it is and 
