replaced inproper comment-out character ";" with "#"

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -3,30 +3,30 @@ test.user.dir=testuserdir
 sanitystart.args.additional= 
 tryme.args.additional=
 
-; Useful for "always successful" build, when you don't care of some
-; particular (and currently broken) modules
+# Useful for "always successful" build, when you don't care of some
+# particular (and currently broken) modules
 stop.when.broken.modules=true
 
-; resolve compile time dependencies and merge all dependent modules
-; set to true and command `ant -Dmodules=javacvs` will build IDE
-; with working module javacvs
+# resolve compile time dependencies and merge all dependent modules
+# set to true and command `ant -Dmodules=javacvs` will build IDE
+# with working module javacvs
 merge.dependent.modules=false
 
-; usefull for NBM build. <nbmerge> can set it to the list
-; of successfuly built modules => can create NBM for them
-; the most powerful combination is to set value to "modules"
-; and set stop.when.broken.modules to false
+# usefull for NBM build. <nbmerge> can set it to the list
+# of successfuly built modules => can create NBM for them
+# the most powerful combination is to set value to "modules"
+# and set stop.when.broken.modules to false
 built.modules.property=
 
-; resolve compile-time dependencies during cleaning working repository
-; set it to true if you want to clean also modules, your module(s) depends on
+# resolve compile-time dependencies during cleaning working repository
+# set it to true if you want to clean also modules, your module(s) depends on
 resolve.clean.dependencies=false
 
-; stop, if the module have got wrong "clean" target
-; if set to false, clean build never fail on calls of the clean targets.
+# stop, if the module have got wrong "clean" target
+# if set to false, clean build never fail on calls of the clean targets.
 stop.when.clean.error=true
 
-; Only useful to override in conjunction with merge target during development:
+# Only useful to override in conjunction with merge target during development:
 fixedmodules=core, \
         openide, \
         core/javahelp, \
@@ -140,12 +140,13 @@ config.bloated-plus-extrabins=${config.bloated}, \
         icebrowser, \
         jini
 
-; moduleconfig for nbms in Daily Alpha Update Centre
-; consider modules icebrowser,vcscvs,jini,debuggertools
+# moduleconfig for nbms in Daily Alpha Update Centre
+# consider modules icebrowser,vcscvs,jini,debuggertools
 config.daily-alpha-nbms=${config.stable-with-apisupport}, \
         ant/docs, \
         classclosure, \
         corba, \
+        core/naming, \
         cpp, \
         cpplite, \
         db, \
@@ -171,10 +172,10 @@ config.daily-alpha-nbms=${config.stable-with-apisupport}, \
         web/taglibed, \
         webl
 
-; make javadoc for these packages
-; - the list will be shared for signature API tests!
-; - for javadoc you may specify org.foo.*, the trailing ".*"
-;     will be stripped for signature API tests
+# make javadoc for these packages
+# - the list will be shared for signature API tests!
+# - for javadoc you may specify org.foo.*, the trailing ".*"
+#     will be stripped for signature API tests
 javadoc.packages=org.netbeans.api.*, \
         org.netbeans.spi.*
 config.javadoc=ant, \
@@ -188,7 +189,7 @@ config.javadoc=ant, \
         openidex/looks, \
         xml/api
 
-; configuration for signature test builds
+# configuration for signature test builds
 config.sigtest=${config.stable}, \
         mdr, \
         openidex/looks
