Include xml/schema module.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -69,7 +69,8 @@ local.config.xml=xml/api, \
         xml/text-edit, \
         xml/tree-edit, \
         xml/css, \
-        xml/xsl
+        xml/xsl, \
+	xml/schema
 
 local.config.vcsprofiles=vcsgeneric/profiles/cvsprofiles, \
         vcsgeneric/profiles/pvcs, \
