IN=8512. Rebranding from FFJ to S1S.

--- a/utilities/src/org/netbeans/modules/url/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/url/Bundle.properties
@@ -65,7 +65,7 @@ Templates/Other/bookmark.url=Web Bookmark
 Bookmarks=&Bookmarks
 Bookmarks/jdc.url=Java &Developer Connection
 Bookmarks/java-web-site.url=&Java Home
-Bookmarks/forte4j-resource.url=&Forte for Java Resources
+Bookmarks/forte4j-resource.url=S&un ONE Studio Resources
 Bookmarks/netbeans-ide-home.url=NetBeans &IDE
 Bookmarks/netbeans-faq.url=&NetBeans FAQs
 Bookmarks/ffj-kb.url=Sun ONE Studio Developer &Resources
