--- a/o.n.core/test/unit/src/org/netbeans/core/lookup/data/build.xml
+++ b/o.n.core/test/unit/src/org/netbeans/core/lookup/data/build.xml
@@ -13,7 +13,7 @@ Microsystems, Inc. All Rights Reserved.
 -->
 <project basedir="." default="all">
 
-    <target name="all" depends="test1,test2,services1,services2"/>
+    <target name="all" depends="test1,test2,services1,services2,ims"/>
 
     <target name="test1">
         <javac srcdir="test1-src" destdir="test1-src"/>
@@ -40,6 +40,13 @@ Microsystems, Inc. All Rights Reserved.
         <javac srcdir="services-jar-2" destdir="services-jar-2" classpath="services-jar-1.jar"/>
         <jar jarfile="services-jar-2.jar" manifest="services-jar-2.mf">
             <fileset dir="services-jar-2"/>
+        </jar>
+    </target>
+
+    <target name="ims">
+        <javac srcdir="install-manifest-service" destdir="install-manifest-service" classpath="../../../../../../../../../openide/netbeans/lib/openide.jar"/>
+        <jar jarfile="install-manifest-service.jar" manifest="install-manifest-service.mf">
+            <fileset dir="install-manifest-service"/>
         </jar>
     </target>
 
