Nicer name and no bogus icon for "status line action".

--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -82,7 +82,7 @@ SaveProject=&Save Project
 SetArguments=Se&t Arguments...
 
 #StatusLineAction
-StatusLine=Status Line Action
+StatusLine=Status Line
 
 #StopCompileAction
 StopCompileAction=&Stop Compile
