Implementation of the enhancement #12186 Generate lower-case HTML tags and attributes

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -63,6 +63,9 @@ HINT_fastImportPackage=If True, fast import dialog will offer packages
 PROP_completionInstantSubstitution=Code Completion Instant Substitution
 HINT_completionInstantSubstitution=If True, invocation of code completion perform instant substitution, if the search result contains only one item
 
+PROP_completionLowerCase=Code Completion Lowercase Substitution
+HINT_completionLowerCase=If True, HTML Code Completion will be available in lower case.
+
 PROP_completionAutoPopupDelay=Delay of Completion Window Auto Popup
 HINT_completionAutoPopupDelay=How long to wait (in milliseconds) before automatically popping up the completion window.
 
