Remainder of #26319 patch, accidentally omitted before.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -26,8 +26,22 @@ resolve.clean.dependencies=false
 # if set to false, clean build never fail on calls of the clean targets.
 stop.when.clean.error=true
 
-# Only useful to override in conjunction with merge target during development:
-fixedmodules=core, \
+# Choose which configuration to use
+# (or explicitly set properties 'modules' and 'fixedmodules').
+# The config must define a config.fixedmodules.XXX property and
+# a config.modules.XXX property, where XXX is the config name.
+# Each is a list of module names, as subdirectories beneath the
+# root of the source tree, separated by commas.
+moduleconfig=stable
+
+config.fixedmodules.platform=core, \
+        openide, \
+        core/ui, \
+        core/windows
+config.modules.platform=autoupdate, \
+        core/javahelp
+
+config.fixedmodules.superslim=core, \
         openide, \
         core/javahelp, \
         core/compiler, \
@@ -35,8 +49,7 @@ fixedmodules=core, \
         core/ui, \
         core/windows, \
         core/ide
-
-config.superslim=classfile, \
+config.modules.superslim=classfile, \
         clazz, \
         editor, \
         html, \
@@ -48,7 +61,8 @@ config.superslim=classfile, \
         text, \
         utilities
 
-config.slim=${config.superslim}, \
+config.fixedmodules.slim=${config.fixedmodules.superslim}
+config.modules.slim=${config.modules.superslim}, \
         autoupdate, \
         beans, \
         debuggercore, \
@@ -76,7 +90,8 @@ local.config.vcsprofiles=vcsgeneric/profiles/cvsprofiles, \
         vcsgeneric/profiles/pvcs, \
         vcsgeneric/profiles/vss
 
-config.stable=${config.slim}, \
+config.fixedmodules.stable=${config.fixedmodules.slim}
+config.modules.stable=${config.modules.slim}, \
         ant, \
         apisupport/lite, \
         applet, \
@@ -106,12 +121,14 @@ config.stable=${config.slim}, \
         ${local.config.xml}, \
         ${local.config.vcsprofiles}
 
-config.stable-with-apisupport=${config.stable}, \
+config.fixedmodules.stable-with-apisupport=${config.fixedmodules.stable}
+config.modules.stable-with-apisupport=${config.modules.stable}, \
         apisupport, \
         apisupport/ant, \
         apisupport/apidocs
 
-config.bloated=${config-stable-with-apisupport}, \
+config.fixedmodules.bloated=${config.fixedmodules.stable-with-apisupport}
+config.modules.bloated=${config.modules.stable-with-apisupport}, \
         ant/docs, \
         classclosure, \
         corba, \
@@ -137,13 +154,15 @@ config.bloated=${config-stable-with-apisupport}, \
         web/taglibed, \
         openidex/looks
 
-config.bloated-plus-extrabins=${config.bloated}, \
+config.fixedmodules.bloated-plus-extrabins=${config.fixedmodules.bloated}
+config.modules.bloated-plus-extrabins=${config.modules.bloated}, \
         icebrowser, \
         jini
 
 # moduleconfig for nbms in Daily Alpha Update Centre
 # consider modules icebrowser,vcscvs,jini,debuggertools
-config.daily-alpha-nbms=${config.stable-with-apisupport}, \
+config.fixedmodules.daily-alpa-nbms=${config.fixedmodules.stable-with-apisupport}
+config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         ant/docs, \
         classclosure, \
         corba, \
@@ -191,6 +210,7 @@ config.javadoc=ant, \
         xml/api
 
 # configuration for signature test builds
-config.sigtest=${config.stable}, \
+config.fixedmodules.sigtest=${config.fixedmodules.stable}
+config.modules.sigtest=${config.modules.stable}, \
         mdr, \
         openidex/looks
